fix scrollbar

--- a/src/styles/simplebar.scss
+++ b/src/styles/simplebar.scss
@@ -1,6 +1,7 @@
 @use 'utils/theme' as *;
 
 .simplebar-scrollbar {
+  transition: none;
   &::before {
     background: var(--primary-grey-color) !important;
     opacity: 0;
@@ -22,11 +23,11 @@ html[data-theme='dark'] {
 
 /* Налаштування анімації руху скролу */
 .simplebar-content-wrapper {
-  scroll-behavior: smooth !important;
-  -webkit-overflow-scrolling: touch !important;
+  scroll-behavior: auto !important;
+  -webkit-overflow-scrolling: auto !important;
   scroll-timeline: none !important;
   scroll-snap-type: none !important;
-  overscroll-behavior: contain !important;
+  overscroll-behavior: none !important;
 }
 
 .simplebar-content {
@@ -58,5 +59,5 @@ html[data-theme='dark'] {
 }
 
 .simplebar-track.simplebar-visible {
-  animation: fadeIn 0.3s ease-in-out;
-} 
+  animation: fadeIn 0.3s linear;
+}
